# waste_water_treatment_virtual_plant

./: README.md  pyproject.toml
opc_ua/: pyvenv.cfg
opc_ua/Scripts/: activate  activate.bat
virtual_plant/: config.json  kombiblock_gui.py  virtual_plant_new.py
waste_water_state_machine/: waste_water_state_machine.ap17
waste_water_state_machine/IM/SPL/: options
waste_water_state_machine/IM/SearchIndex/: _aq.cfs  _ar.cfs  _as.cfs  _at.cfs  _au.cfs  _av.cfs  _aw.cfs  _ax.cfs  segments_6g
waste_water_state_machine/System/: PEData.idx  PEData.plf
waste_water_state_machine/XRef/: XRef.db
